--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -10212,6 +10212,8 @@ p.notification {
   background-color: #e3e3e3; }
 
 .tabs {
+  box-shadow: 0 3px 5px #888;
+  border-bottom: 1px solid #c5c0c0;
   height: 56px; }
 
 .tabs-top.tabs-striped .tab-item {
@@ -10484,7 +10486,15 @@ button:active {
 
 .profile-tabs .button {
   border-radius: 0px !important;
-  height: 43px; }
+  height: 43px;
+  border: 1px solid #c7c7c7; }
 
 .profile-tabs a span {
   line-height: 4px !important; }
+
+@media only screen and (max-device-width: 360px) {
+  .profile-details img {
+    height: 80px;
+    width: 80px; }
+  .profile-details h2 {
+    font-size: 16px; } }
