--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -336,8 +336,8 @@ p.notification {
 }
 
 .filter-fotter{
+  height: 55px !important;
   width: 15% !important;
-
   bottom: 16px;
   left: 10px;
   background: transparent;
@@ -345,6 +345,10 @@ p.notification {
 .filter-fotter i{
   width: 100%;
   font-size: 40px;
+}
+.filter-fotter img{
+  max-width: 50px;
+  max-height: 50px;
 }
 .subject-list .list .item{
   height: 115px;
@@ -728,6 +732,11 @@ button:active{
 }
 .profile-tabs a span{
   line-height: 4px !important;
+}
+
+.circle-new-message{
+  top: -11px !important;
+  right: 34%;
 }
 
 @media only screen
