--- a/www/templates/subjects/html/subjects.html
+++ b/www/templates/subjects/html/subjects.html
@@ -29,7 +29,7 @@
     </ion-infinite-scroll>
 
   </ion-content>
-  <div style="height: 55px;" class="bar bar-footer filter-fotter">
+  <div class="bar bar-footer filter-fotter">
     <img ng-click="goToFilter()" style="width: 50px; height: 50px" src="img/filter.png">
   </div>
 </ion-view>
