--- a/www/templates/messages/html/messages.html
+++ b/www/templates/messages/html/messages.html
@@ -1,11 +1,9 @@
-<ion-view ng-controller="NewMessagesCtrl" cache-view="false">
-
-  <ion-content >
+<ion-view class="messages-page" ng-controller="NewMessagesCtrl" cache-view="false">
+  <ion-content class="messages-content">
     <div class="content">
-      <div class="list messages">
-        <a class="item item-avatar item-icon-right" ng-repeat="message in messages">
-
-          <img ng-click="goToUserProfile(message)" ng-src="{{message.fbPhotoUrl}}">
+      <ion-list class="messages">
+        <ion-item ng-click="goToChat(message)" class="item-avatar item-icon-right" ng-repeat="message in messages">
+          <img ng-src="{{message.fbPhotoUrl}}">
           <div ng-click="goToChat(message)">
             <h2>{{message.subjectName}}</h2>
             <p>{{message.userName}}: {{message.lastMessage}}</p>
@@ -14,9 +12,9 @@
           <i class="icon ion-record online-offline" ng-class="{'online-circle': message.online, 'offline-circle': !message.online}"></i>
 
 
-        </a>
+        </ion-item>
 
-      </div>
+      </ion-list>
     </div>
   </ion-content>
 </ion-view>
