fixing add subject issues

--- a/www/templates/subjects/html/addSubject-s2.html
+++ b/www/templates/subjects/html/addSubject-s2.html
@@ -12,7 +12,7 @@
       <ion-list>
       <div class="add-subject">
         <input required name="noteTitle" placeholder="Subject Title *" ng-model="subject.title">
-        <textarea required rows="3" ng-model="subject.description" maxlength="250"
+        <textarea rows="3" maxlength="250" required rows="3" ng-model="subject.description" maxlength="250"
                   placeholder="Describe your subject here ...."></textarea>
 
       </div>
