--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -10024,8 +10024,9 @@ p.notification {
 .circle-new-message {
   position: absolute;
   font-size: 16px;
-  top: -12px;
-  right: 9px;
+  top: -13px !important;
+  right: 33%;
+  height: 0px;
   color: #c73636; }
 
 .message-icon {
@@ -10124,6 +10125,7 @@ p.notification {
   position: absolute; }
 
 .filter-fotter {
+  height: 55px !important;
   width: 15% !important;
   bottom: 16px;
   left: 10px;
@@ -10132,6 +10134,10 @@ p.notification {
 .filter-fotter i {
   width: 100%;
   font-size: 40px; }
+
+.filter-fotter img {
+  max-width: 50px;
+  max-height: 50px; }
 
 .subject-list .list .item {
   height: 115px;
@@ -10252,7 +10258,7 @@ a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, bo
 
 .add-subject textarea {
   width: 100%;
-  height: 150px;
+  height: 125px;
   font-size: 20px;
   font-family: 'loudly';
   padding: 10px; }
@@ -10464,7 +10470,7 @@ button:active {
   color: white; }
 
 .bar.bar-calm {
-  top: 55px !important;
+  top: 59px !important;
   height: 64px !important;
   background-color: #7f7f7f !important;
   border-color: #7f7f7f !important; }
@@ -10476,7 +10482,7 @@ button:active {
   border: none; }
 
 .add-subject-s1-page {
-  top: 120px !important; }
+  top: 124px !important; }
 
 .popover {
   height: 172px !important; }
