--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -10122,6 +10122,7 @@ p.notification {
   position: absolute; }
 
 .filter-fotter {
+  height: 55px !important;
   width: 15% !important;
   bottom: 16px;
   left: 10px;
@@ -10130,6 +10131,10 @@ p.notification {
 .filter-fotter i {
   width: 100%;
   font-size: 40px; }
+
+.filter-fotter img {
+  max-width: 50px;
+  max-height: 50px; }
 
 .subject-list .list .item {
   height: 115px;
@@ -10151,9 +10156,10 @@ p.notification {
   width: 30px; }
 
 .tabs .tab-item .icon.subjects-blue {
+  margin-top: 4% !important;
   background-repeat: no-repeat;
   background-position: 50%;
-  height: 80%;
+  height: 70%;
   background-image: url("../img/logo.png");
   background-size: contain; }
 
@@ -10202,9 +10208,10 @@ p.notification {
   margin-top: 5px !important; }
 
 .tabs .tab-item .icon.subjects-grey {
+  margin-top: 4% !important;
   background-repeat: no-repeat;
   background-position: 50%;
-  height: 80%;
+  height: 70%;
   background-image: url("../img/logo_grey.png");
   background-size: contain; }
 
@@ -10293,6 +10300,7 @@ textarea, input::-webkit-input-placeholder {
 
 .messages .item {
   height: 100px;
+  top: -5px !important;
   padding-left: 92px !important; }
 
 .messages .item img {
@@ -10462,7 +10470,7 @@ button:active {
   color: white; }
 
 .bar.bar-calm {
-  top: 55px !important;
+  top: 59px !important;
   height: 64px !important;
   background-color: #7f7f7f !important;
   border-color: #7f7f7f !important; }
@@ -10474,7 +10482,7 @@ button:active {
   border: none; }
 
 .add-subject-s1-page {
-  top: 120px !important; }
+  top: 124px !important; }
 
 .popover {
   height: 172px !important; }
@@ -10491,6 +10499,10 @@ button:active {
 
 .profile-tabs a span {
   line-height: 4px !important; }
+
+.circle-new-message {
+  top: -11px !important;
+  right: 34%; }
 
 @media only screen and (max-device-width: 360px) {
   .profile-details img {
