--- a/www/templates/profile/html/myProfile.html
+++ b/www/templates/profile/html/myProfile.html
@@ -2,7 +2,8 @@
 <ion-view cache-view="false" title="My Profile">
   <div class="bar bar-header profile-header">
     <div class="profile-details">
-      <img ng-src="{{userProfile.fbPhotoUrl}}">
+      <img ng-click="logOut()" class="logout" src="img/logout.png">
+      <img class="profile" ng-src="{{userProfile.fbPhotoUrl}}">
       <h2>{{userProfile.first_name}} {{userProfile.last_name}}</h2>
       <button class="button button-positive">
         Update Profile
