--- a/www/templates/login/html/login.html
+++ b/www/templates/login/html/login.html
@@ -19,7 +19,7 @@
       </div>
       <div class="login-footer">
         <button ng-click="fbLogin()" class="button button-block button-positive icon-left ion-social-facebook fb-button">
-          <span>Login With Facebook</span>
+          <span class="login-with-fb">Login With Facebook</span>
         </button>
         <p>
           By singing up, I agree to Loudly's Terms of service and Privacy Policy.
