--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -10249,6 +10249,7 @@ p.notification {
   font-size: 30px !important; }
 
 a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
+  line-height: 23px !important;
   vertical-align: text-bottom !important; }
 
 .add-subject-header-span {
@@ -10329,7 +10330,7 @@ textarea, input::-webkit-input-placeholder {
   background-repeat: repeat-x;
   background-position: 0px 6px; }
 
-.profile-details .profile {
+.profile-details img {
   height: 100px;
   width: 100px;
   border-radius: 50px;
@@ -10510,7 +10511,7 @@ button:active {
   top: -6px; }
 
 @media only screen and (max-device-width: 360px) {
-  .profile-details .profile {
+  .profile-details img {
     height: 80px;
     width: 80px; }
   .profile-details h2 {
