--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -312,7 +312,6 @@ p.notification {
   color: white !important;
   font-size: 30px !important;
   font-family: 'thinkout';
-
 }
 .login-loudly{
   color: white !important;
@@ -467,7 +466,6 @@ p.notification {
 }
 
 a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video{
-  line-height: 23px !important;
   vertical-align: text-bottom !important;
 }
 .add-subject-header-span{
@@ -758,4 +756,8 @@ and (max-device-width : 360px) {
 }
 .login-with-fb {
   line-height: 23px !important;
+}
+
+.tab-title {
+  display: none;
 }
