round filter corners

--- a/www/templates/subjects/html/filter.html
+++ b/www/templates/subjects/html/filter.html
@@ -1,4 +1,4 @@
-<ion-modal-view class="custome-modal">
+<ion-modal-view class="custome-modal filter-pop">
   <ion-header-bar>
     <span class="title filter-title">Filter</span>
   </ion-header-bar>
