--- a/www/templates/chat/html/chat.html
+++ b/www/templates/chat/html/chat.html
@@ -36,7 +36,7 @@
   <form name="sendMessageForm" ng-submit="sendMessage(data.message)" novalidate>
     <ion-footer-bar class="bar-stable item-input-inset message-footer" keyboard-attach>
       <label class="item-input-wrapper">
-        <input id="msg-input" ng-disabled="disableSend" ng-change="updateTyping()" ng-model="data.message" class="input-message" type="text" placeholder="{{sendInputPlaceHolder}}">
+        <input event-focus="click" event-focus-id="email" ng-disabled="disableSend" ng-change="updateTyping()" ng-model="data.message" class="input-message" type="text" placeholder="{{sendInputPlaceHolder}}">
       </label>
       <div class="footer-btn-wrap">
         <button class="button button-icon icon ion-ios-paperplane footer-btn" type="submit"
