close button fix and other ui fixes

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -764,3 +764,6 @@ and (max-device-width : 360px) {
 .filter-pop {
   border-radius: 8px !important;
 }
+.delete-btn {
+  width: 62.32px !important;
+}
