--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -653,6 +653,7 @@ textarea, input::-webkit-input-placeholder {
   border-left: none;
 }
 .filter-list .gender-button{
+  border-radius: 5px !important;
   min-height: 38px;
   font-size: 13px!important;
   padding-left: 5px;
