--- a/www/templates/profile/html/myProfile.html
+++ b/www/templates/profile/html/myProfile.html
@@ -38,7 +38,7 @@
       <ion-item class="item-thumbnail-left item-icon-right categories-list" ng-repeat="user in blockedUsers">
         <img ng-src="{{user.fbPhotoUrl}}"/>
         <h2>{{user.userName}}</h2>
-        <ion-option-button ng-click="showConfirm(user)" class="button-assertive">Delete</ion-option-button>
+        <ion-option-button ng-click="showConfirm(user)" class="button-assertive">Unblock</ion-option-button>
       </ion-item>
     </ion-list>
   </ion-content>
