--- a/www/templates/subjects/html/addSubject-s2.html
+++ b/www/templates/subjects/html/addSubject-s2.html
@@ -18,9 +18,13 @@
       </div>
       </ion-list>
 
-      <div ng-click="createSubject()" ng-class="{'create-subject-btn-blue': subject.description.length>0 && subject.title.length>0}" class="create-subject-btn create-subject-btn-grey">
 
-      </div>
     </div>
   </ion-content>
+  <div class="bar bar-footer filter-fotter">
+    <div ng-click="createSubject()" ng-class="{'create-subject-btn-blue': subject.description.length>0 && subject.title.length>0}" class="create-subject-btn create-subject-btn-grey">
+
+    </div>
+
+  </div>
 </ion-view>
