--- a/www/templates/subjects/html/subjects.html
+++ b/www/templates/subjects/html/subjects.html
@@ -29,7 +29,11 @@
     </ion-infinite-scroll>
 
   </ion-content>
-  <div class="bar bar-footer filter-fotter">
-    <img ng-click="goToFilter()" style="width: 50px; height: 50px" src="img/filter.png">
+  <div class="bar bar-footer add-subject-fotter">
+    <div ng-click="goToFilter()" class="create-subject-btn filter-btn">
+
+    </div>
+
   </div>
+
 </ion-view>
