--- a/www/templates/shared/drop-down-menu.html
+++ b/www/templates/shared/drop-down-menu.html
@@ -1,9 +1,9 @@
-<ion-popover-view>
+<ion-popover-view class='message-pop'>
   <ion-content>
     <ion-list>
-      <ion-item ng-click="goToUserProfile()">
+<!--      <ion-item ng-click="goToUserProfile()">
         User Profile
-      </ion-item>
+      </ion-item>-->
       <ion-item ng-click="reportUser()">
         Report User
       </ion-item>
