--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -764,3 +764,16 @@ and (max-device-width : 360px) {
 .filter-pop {
   border-radius: 8px !important;
 }
+.item-icon-right{
+  padding-right: 15px;
+}
+.subject-username{
+
+}
+.subject-title{
+
+}
+.subject-description{
+  font-size: 12px !important;
+  white-space: initial !important;
+}
