--- a/www/templates/chat/html/chat.html
+++ b/www/templates/chat/html/chat.html
@@ -1,12 +1,14 @@
 <ion-view overflow-scroll="true" cache-view="false" class="aaa">
   <div class="bar bar-header bar-light">
-    <a ng-controller="AppCtrl" class="button button-icon button-clear ion-arrow-left-c chat-back" ng-click="goBack()"></a>
+    <a ng-controller="AppCtrl" class="button button-icon button-clear ion-arrow-left-c chat-back"
+       ng-click="goBack()"></a>
     <a class="title chat-profile-info item item-avatar item-icon-right">
 
       <img ng-src="{{chatDetails.fbPhotoUrl}}">
       <h2>{{chatDetails.userName}}</h2>
       <p>{{chatDetails.subjectName}}</p>
-      <i ng-controller="OnlineUserCtrl" class="icon ion-record online-offline" ng-class="{'online-circle': isUserOnline == true, 'offline-circle': isUserOnline == false}"></i>
+      <i ng-controller="OnlineUserCtrl" class="icon ion-record online-offline"
+         ng-class="{'online-circle': isUserOnline == true, 'offline-circle': isUserOnline == false}"></i>
 
     </a>
 
@@ -15,8 +17,15 @@
 
   <ion-content ng-class="{expanded: isExpanded}" id="menu-dashboard-content" class="padding">
     <section class="chats">
+      <span>
+        <span>
+   <div class="chat-date-span">
+            <span>{{chatDetails.desc}}</span>
+          </div>
+        </span>
       <span ng-repeat="(key, message) in messages">
         <span>
+
           <div class="chat-date-span" ng-if="message.date_string != messages[$index - 1].date_string">
             <span ng-if="message.date_string == dateString">today</span>
             <span ng-if="message.date_string != dateString">{{message.date_string}}</span>
@@ -36,7 +45,8 @@
   <form name="sendMessageForm" ng-submit="sendMessage(data.message)" novalidate>
     <ion-footer-bar class="bar-stable item-input-inset message-footer" keyboard-attach>
       <label class="item-input-wrapper">
-        <input id="msg-input" ng-disabled="disableSend" ng-change="updateTyping()" ng-model="data.message" class="input-message" type="text" placeholder="{{sendInputPlaceHolder}}">
+        <input id="msg-input" ng-disabled="disableSend" ng-change="updateTyping()" ng-model="data.message"
+               class="input-message" type="text" placeholder="{{sendInputPlaceHolder}}">
       </label>
       <div class="footer-btn-wrap">
         <button class="button button-icon icon ion-ios-paperplane footer-btn" type="submit"
