--- a/www/templates/subjects/html/subjects.html
+++ b/www/templates/subjects/html/subjects.html
@@ -8,17 +8,18 @@
 
       <ion-item ng-click="goToChat(subject)" class="item-avatar item-icon-right" ng-repeat="subject in subjects">
         <img ng-click="goToUserProfile(subject)" ng-src="{{subject.user.fbPhotoUrl}}">
-        <h2>{{subject.user.first_name}}, {{subject.title}}</h2>
-        <p>{{(subject.interested.length>0)? subject.description+' , interested '+subject.interested.length:subject.description}}</p>
-        <div class="subject-container">
-          <div>
-            <img src="img/favorite.png">
-          </div>
+        <h2 class="subject-username">{{subject.user.first_name}}, </h2>
+        <!--<h2 class="subject-title">{{subject.title}}</h2>-->
+        <p class="subject-description">{{(subject.interested.length>0)? subject.description.substring(0,100)+' , interested '+subject.interested.length:subject.description.substring(0,100)}}</p>
+        <!--<div class="subject-container">-->
+          <!--<div>-->
+            <!--<img src="img/favorite.png">-->
+          <!--</div>-->
 
-          <div ng-click="goToChat(subject)" >
-            <img src="img/chat.png">
-          </div>
-        </div>
+          <!--<div ng-click="goToChat(subject)" >-->
+            <!--<img src="img/chat.png">-->
+          <!--</div>-->
+        <!--</div>-->
 
       </ion-item>
     </ion-list>
