--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -793,3 +793,6 @@ and (max-device-width : 360px) {
   font-size: 12px !important;
   white-space: initial !important;
 }
+.last-message{
+  font-weight: bold;
+}
