--- a/www/templates/messages/html/messages.html
+++ b/www/templates/messages/html/messages.html
@@ -4,8 +4,8 @@
 
       <ion-item ng-click="goToChat(message)" class="item-avatar item-icon-right" ng-repeat="message in messages">
         <img ng-src="{{message.fbPhotoUrl}}">
-        <h2>{{message.subjectName}}</h2>
-        <p>{{message.userName}}: {{message.lastMessage}}</p>
+        <p class="subject-description">{{message.desc}}</p>
+        <p class="last-message">{{message.userName}}: {{message.lastMessage}}</p>
         <i ng-class="message.readMessage ? 'message-unread' : (!message.readMessage ? 'message-read' : 'message-unread')" ng-click="goToChat(message)" class="icon ion-chatbubble"></i>
 
         <i class="icon ion-record online-offline" ng-class="{'online-circle': message.online, 'offline-circle': !message.online}"></i>
