subject detail message

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -796,3 +796,7 @@ and (max-device-width : 360px) {
 .last-message{
   font-weight: bold;
 }
+.detail-message {
+  width: 100% !important;
+  background-color: #8bc79d !important;
+}
