--- a/www/templates/chat/html/chat.html
+++ b/www/templates/chat/html/chat.html
@@ -17,9 +17,9 @@
     <section class="chats">
       <span>
         <span>
-   <div class="chat-date-span">
+            <div class="chat-date-span detail-message">
             <span>{{chatDetails.desc}}</span>
-          </div>
+            </div>
         </span>
       <span ng-repeat="(key, message) in messages">
         <span>
