--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -10549,3 +10549,10 @@ button:active {
 .subject-description {
   font-size: 12px !important;
   white-space: initial !important; }
+
+.last-message {
+  font-weight: bold; }
+
+.detail-message {
+  width: 100% !important;
+  background-color: #8bc79d !important; }
