--- a/www/templates/messages/html/messages.html
+++ b/www/templates/messages/html/messages.html
@@ -4,14 +4,11 @@
 
       <ion-item ng-click="goToChat(message)" class="item-avatar item-icon-right" ng-repeat="message in messages">
         <img ng-src="{{message.fbPhotoUrl}}">
-        <p class="subject-description">{{(message.desc.length>70)?message.desc.substring(0,70)+'...':message.desc.substring(0,70)}}</p>
         <p class="last-message">{{message.userName}}: {{message.lastMessage}}</p>
-        <i ng-class="message.readMessage ? 'message-unread' : (!message.readMessage ? 'message-read' : 'message-unread')" ng-click="goToChat(message)" class="icon ion-chatbubble"></i>
-
+        <p class="subject-description">{{(message.desc.length>70)?message.desc.substring(0,70)+'...':message.desc.substring(0,70)}}</p>
+        <i ng-class="message.readMessage ? 'message-unread' : (!message.readMessage ? 'message-read' : 'message-unread')" ng-click="goToChat(message)" class="icon ion-chevron-right"></i>
         <i class="icon ion-record online-offline" ng-class="{'online-circle': message.online, 'offline-circle': !message.online}"></i>
-
+      </ion-item>
     </ion-list>
-
-
   </ion-content>
 </ion-view>
