--- a/www/templates/profile/html/myProfile.html
+++ b/www/templates/profile/html/myProfile.html
@@ -28,6 +28,9 @@
     <ion-list ng-show="tab=='closed' || tab=='open'">
       <ion-item class="item-thumbnail-left item-icon-right categories-list" ng-repeat="subject in subjects">
         <img ng-src="{{categoriesUrl}}{{subject.category._id}}.png">
+        <div class="category-name">
+          <p>{{subject.category.name}}</p>
+        </div>
         <h2>{{subject.description}}</h2><h2 am-time-ago="subject.create_date"></h2>
         <ion-option-button ng-show="tab=='open'" ng-click="changeStatus(subject, $index, false)" class="button-positive">Close</ion-option-button>
         <ion-option-button ng-show="tab=='closed'" ng-click="changeStatus(subject, $index, true)" class="button-positive close-btn">Open</ion-option-button>
@@ -35,7 +38,7 @@
       </ion-item>
     </ion-list>
     <ion-list ng-show="tab=='blocked'">
-      <ion-item class="item-thumbnail-left item-icon-right categories-list" ng-repeat="user in blockedUsers">
+      <ion-item class="item-thumbnail-left item-icon-right blocked-user" ng-repeat="user in blockedUsers">
         <img ng-src="{{user.fbPhotoUrl}}"/>
         <h2>{{user.userName}}</h2>
         <ion-option-button ng-click="showConfirm(user)" class="button-assertive">Unblock</ion-option-button>
