--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -694,7 +694,7 @@ textarea, input::-webkit-input-placeholder {
 }
 
 .modal-open .modal, .modal-open .modal-backdrop {
-  height: 80% !important;
+  height: 89% !important;
 
 }
 
@@ -900,6 +900,7 @@ button:active {
   display: none;
 }
 .filter-pop {
+  margin-top: -10% !important;
   border-radius: 8px !important;
 }
 .delete-btn {
