--- a/www/templates/profile/html/myProfile.html
+++ b/www/templates/profile/html/myProfile.html
@@ -29,6 +29,7 @@
       <ion-item class="item-thumbnail-left item-icon-right categories-list" ng-repeat="subject in subjects">
         <img ng-src="{{categoriesUrl}}{{subject.category._id}}.png">
         <h2>{{subject.description}}</h2><h2 am-time-ago="subject.create_date"></h2>
+        <ion-option-button ng-show="tab=='open'" ng-click="editSubject(subject,$index)" class="button-positive">Edit</ion-option-button>
         <ion-option-button ng-show="tab=='open'" ng-click="changeStatus(subject, $index, false)" class="button-positive">Close</ion-option-button>
         <ion-option-button ng-show="tab=='closed'" ng-click="changeStatus(subject, $index, true)" class="button-positive close-btn">Open</ion-option-button>
         <ion-option-button ng-click="deleteSubject($index, subject)" class="button-assertive delete-btn">Delete</ion-option-button>
