--- a/www/templates/subjects/html/subjects.html
+++ b/www/templates/subjects/html/subjects.html
@@ -14,7 +14,7 @@
         <span class="subject-time" am-time-ago="subject.create_date"></span>
         <div class="subject-container">
           <div>
-            <img class="fav-star" src="img/favorite.png">
+            <img class="fav-star" ng-click="addToFavorites()" src="img/favorite.png">
           </div>
 
 <!--          <div ng-click="goToChat(subject)" >
