--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -10374,12 +10374,17 @@ textarea, input::-webkit-input-placeholder {
   height: 16px; }
 
 .modal-open .modal, .modal-open .modal-backdrop {
-  height: 89% !important; }
+  height: 45% !important; }
 
-.custome-modal {
+.custom-modal {
   width: 94% !important;
   left: 3% !important;
   top: 16% !important; }
+
+.custom-edit-modal {
+  width: 94% !important;
+  left: 3% !important;
+  top: 27% !important; }
 
 .categories-list img {
   max-width: 80px !important;
@@ -10573,6 +10578,12 @@ button:active {
   bottom: 5px;
   color: #666; }
 
+.edit-subject {
+  width: 100%; }
+
+.update-subject-btn-blue {
+  float: right; }
+
 .category-name p {
   font-size: 12px;
   font-weight: bolder;
@@ -10603,3 +10614,11 @@ button:active {
 
 .cat-add-sub {
   margin-top: 6% !important; }
+
+.edit-subject {
+  margin: 10% !important; }
+
+.edit-pop {
+  margin-top: 20% !important;
+  border-radius: 8px !important;
+  height: 45% !important; }
